# rim-weighting

./: .gitignore  LICENSE  README.md  pandas_example.ipynb  pyproject.toml  setup.py
docs/: README.md  usage.md
rim_weighting/: rim_pandas.py  rim_pyspark.py
tests/: test_rim_pandas.py  test_rim_pyspark.py
