[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rim_weighting"
version = "0.1.3"
description = "A Python package for RIM weighting using Pandas and PySpark."
authors = [
    { name = "Amit Mohite", email = "amit.mohite@outlook.com" }
]
dependencies = [
    "pandas",
    "numpy",
    "pytest",
    "tabulate",
    "pyspark"
]
requires-python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"

[tool.setuptools]
packages = ["rim_weighting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"

[project.optional-dependencies]
dev = ["pytest"]
